log
Wed 20 Mar 2024 02:09:47 AM UTC: 
 tests:  0|5
total_score: 0/70
076c42e
Wed 20 Mar 2024 02:22:31 AM UTC: 
 exercises.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:53:9: error: implicit declaration of function ‘pushfront’; did you mean ‘pushFront’? [-Werror=implicit-function-declaration]
   53 |         pushfront(L, dato);
      |         ^~~~~~~~~
      |         pushFront
cc1: all warnings being treated as errors
Compilation failed
aedbcc8
Wed 20 Mar 2024 02:22:38 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
72f6a08
Wed 20 Mar 2024 02:23:28 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
c4158c1
Wed 20 Mar 2024 02:29:12 AM UTC: 
 exercises.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
4254172
Wed 20 Mar 2024 02:33:36 AM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
b65dbe2
Wed 20 Mar 2024 03:40:50 AM UTC: 
 exercises.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:117:9: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
  117 |   while((int)top(P1) != -1)
      |         ^
exercises.c:124:23: error: comparison between pointer and integer [-Werror]
  124 |   while (top(pilaAux) != -1)
      |                       ^~
cc1: all warnings being treated as errors
Compilation failed
4396169
Wed 20 Mar 2024 03:44:09 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
ab8c750
Thu 21 Mar 2024 02:40:20 AM UTC: 
 exercises.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  0|0
ab78c5a
Thu 21 Mar 2024 02:41:15 AM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|1
total_score: 50/70
812c870
Thu 21 Mar 2024 02:43:19 AM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
5044f46
Thu 21 Mar 2024 02:43:41 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
69c45e8
